// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component sanity matches default snapshot 1`] = `
.c0 {
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 8px;
  margin-bottom: 8px;
  padding: 32px;
  background-color: white;
  width: 100%;
  min-width: 1px;
  height: auto;
  min-height: 1px;
  position: relative;
  border: 1px solid;
  border-color: #D6D6D6;
  text-align: left;
  text-align: left;
}

.c0 {
  box-sizing: border-box;
}

.c0 {
  box-shadow: 0px 8px 16px rgba(0,0,0,0.1);
  -webkit-transition: box-shadow 300ms ease;
  transition: box-shadow 300ms ease;
}

.c0:hover {
  box-shadow: 0px 8px 16px rgba(0,0,0,0.3);
}

<div
  class="c0"
  height="auto"
  width="100%"
>
  
</div>
`;

exports[`Card component sanity matches themed snapshot 1`] = `
.c1 {
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 8px;
  margin-bottom: 8px;
  padding: 32px;
  background-color: #fff;
  width: 100%;
  min-width: 16px;
  height: auto;
  min-height: 16px;
  position: relative;
  border: 1px solid transparent;
  border-color: #D6D6D6;
  text-align: left;
  text-align: left;
}

.c1 {
  box-sizing: border-box;
}

.c1 {
  box-shadow: 0px 8px 16px rgba(0,0,0,0.1);
  -webkit-transition: box-shadow 300ms ease;
  transition: box-shadow 300ms ease;
}

.c1:hover {
  box-shadow: 0px 8px 16px rgba(0,0,0,0.3);
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <div
    class="c1"
    height="auto"
    width="100%"
  >
    
  </div>
</div>
`;
